fix: 2차 피드백 반영

--- a/album.html
+++ b/album.html
@@ -7,6 +7,9 @@
     <link rel="shortcut icon" type="image/x-icon" href="/assets/images/common/favicon.ico" />
     <link rel="stylesheet" href="./assets/css/tailwindcss.output.css" />
     <link rel="stylesheet" href="/assets/css/album.css" />
+    <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/build/three.min.js"></script>
+    <script src="./assets/js/album-playlist.js" defer></script>
+    <script src="./assets/js/three.js" defer></script>
   </head>
 
   <body class="cursor-[url('/assets/images/common/cursor/rounded.png'),_default] bg-zinc-950 text-white">
@@ -141,9 +144,6 @@
       </div>
     </section>
     <div id="album-cover" class="mx-auto aspect-square max-h-[1000px] w-full"></div>
-    <script src="/assets/js/album-playlist.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/build/three.min.js"></script>
-    <script src="/assets/js/three.js"></script>
 
     <!-- s: 풋터 -->
     <footer class="container mx-auto flex flex-wrap items-center justify-between py-10 font-cafe-fill text-4xl">
