--- a/member.html
+++ b/member.html
@@ -7,6 +7,8 @@
     <link rel="shortcut icon" type="image/x-icon" href="/assets/images/common/favicon.ico" />
     <link rel="stylesheet" href="/assets/css/tailwindcss.output.css" />
     <link rel="stylesheet" href="/assets/css/member.css" />
+    <script src="/assets/js/member-photo.js" defer></script>
+    <script src="/assets/js/member-message.js" defer></script>
   </head>
   <body class="cursor-[url('/assets/images/common/cursor/bunnie.png'),_default] bg-zinc-950 text-white">
     <!-- s: 헤더 -->
@@ -325,7 +327,5 @@
       <a href="https://github.com/ormcamp-fe-3rd/bunnies-page" target="_blank">Hongdaeipgu</a>
     </footer>
     <!-- e: 풋터 -->
-    <script src="/assets/js/member.js"></script>
-    <script src="/assets/js/member-message.js"></script>
   </body>
 </html>
