--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="/assets/css/tailwindcss.output.css" />
     <link rel="stylesheet" href="/assets/css/member.css" />
     <link rel="stylesheet" href="/assets/css/album.css" />
-    <script src="/assets/js/home.js"></script>
+    <script src="./assets/js/video.js"></script>
+    <script src="./assets/js/modal-popup.js" defer></script>
+    <script src="./assets/js/card-rotate.js" defer></script>
   </head>
 
   <!-- ! 홈-메뉴-텍스트 및 아이콘 -->
@@ -264,7 +266,5 @@
       <a href="https://github.com/ormcamp-fe-3rd/bunnies-page" target="_blank">Hongdaeipgu</a>
     </footer>
     <!-- e: 풋터 -->
-    <script src="./assets/js/modal-popup.js"></script>
-    <script src="./assets/js/card-rotate.js"></script>
   </body>
 </html>
