fix: 배포를 위한 경로 설정 변경

--- a/album.html
+++ b/album.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bunnies Page</title>
-    <link rel="shortcut icon" type="image/x-icon" href="/assets/images/common/favicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="./assets/images/common/favicon.ico" />
     <link rel="stylesheet" href="./assets/css/tailwindcss.output.css" />
-    <link rel="stylesheet" href="/assets/css/album.css" />
+    <link rel="stylesheet" href="./assets/css/album.css" />
     <script type="importmap">
       {
         "imports": {
@@ -15,34 +15,34 @@
         }
       }
     </script>
-    <script type="module" src="/assets/js/album/playlist.js"></script>
-    <script type="module" src="/assets/js/album/three.js"></script>
+    <script type="module" src="./assets/js/album/playlist.js"></script>
+    <script type="module" src="./assets/js/album/three.js"></script>
   </head>
 
-  <body class="cursor-[url('/assets/images/common/cursor/rounded.png'),_default] bg-zinc-950 text-white">
+  <body class="cursor-[url('../images/common/cursor/rounded.png'),_default] bg-zinc-950 text-white">
     <!-- s: 헤더 -->
     <header class="container mx-auto flex h-40 w-full flex-wrap items-center justify-between max-md:px-5">
       <nav class="flex flex-wrap justify-between font-cafe text-4xl max-md:w-full md:gap-20">
-        <a href="/" class="hover:font-cafe-fill">Main</a>
-        <a href="/member.html" class="hover:font-cafe-fill">Team</a>
-        <a href="/album.html" class="font-cafe-fill hover:font-cafe-fill">Albums</a>
+        <a href="./index.html" class="hover:font-cafe-fill">Main</a>
+        <a href="./member.html" class="hover:font-cafe-fill">Team</a>
+        <a href="./album.html" class="font-cafe-fill hover:font-cafe-fill">Albums</a>
       </nav>
       <!-- s: SNS -->
       <div class="flex items-center justify-between gap-4 max-md:hidden">
         <a href="https://play.google.com/store/apps/details?id=co.weverse.phoning&hl=ko&pli=1" target="_blank">
-          <img src="/assets/images/header/homeMenuicon1.svg" alt="phoning" class="h-6 w-6" />
+          <img src="./assets/images/header/homeMenuicon1.svg" alt="phoning" class="h-6 w-6" />
         </a>
         <a href="https://x.com/NewJeans_ADOR" target="_blank">
-          <img src="/assets/images/header/homeMenuicon2.svg" alt="x" class="h-6 w-6" />
+          <img src="./assets/images/header/homeMenuicon2.svg" alt="x" class="h-6 w-6" />
         </a>
         <a href="https://www.instagram.com/newjeans_official/" target="_blank">
-          <img src="/assets/images/header/homeMenuicon3.svg" alt="insta" class="h-6 w-6" />
+          <img src="./assets/images/header/homeMenuicon3.svg" alt="insta" class="h-6 w-6" />
         </a>
         <a href="https://www.facebook.com/official.newjeans/?locale=gn_PY" target="_blank">
-          <img src="/assets/images/header/homeMenuicon4.svg" alt="facebook" class="h-6 w-6" />
+          <img src="./assets/images/header/homeMenuicon4.svg" alt="facebook" class="h-6 w-6" />
         </a>
         <a href="https://www.youtube.com/channel/UCMki_UkHb4qSc0qyEcOHHJw" target="_blank">
-          <img src="/assets/images/header/homeMenuicon5.svg" alt="youtube" class="h-6 w-6" />
+          <img src="./assets/images/header/homeMenuicon5.svg" alt="youtube" class="h-6 w-6" />
         </a>
       </div>
       <!-- e: SNS -->
@@ -56,36 +56,36 @@
         <!--CD 플레이 영역-->
         <div class="album_player mt-7 max-w-96">
           <div class="cd-wrap mx-auto">
-            <img class="CD_img hidden aspect-square rounded-full" src="/assets/images/album/album_img/1stEP.jpg" />
-            <img class="CD_img hidden aspect-square rounded-full" src="/assets/images/album/album_img/OMG.jpg" />
-            <img class="CD_img hidden aspect-square rounded-full" src="/assets/images/album/album_img/GetUp.webp" />
-            <img class="CD_img hidden aspect-square rounded-full" src="/assets/images/album/album_img/HowSweet.webp" />
+            <img class="CD_img hidden aspect-square rounded-full" src="./assets/images/album/album_img/1stEP.jpg" />
+            <img class="CD_img hidden aspect-square rounded-full" src="./assets/images/album/album_img/OMG.jpg" />
+            <img class="CD_img hidden aspect-square rounded-full" src="./assets/images/album/album_img/GetUp.webp" />
+            <img class="CD_img hidden aspect-square rounded-full" src="./assets/images/album/album_img/HowSweet.webp" />
             <img
               class="CD_img hidden aspect-square rounded-full"
-              src="/assets/images/album/album_img/Supernatural.webp" />
+              src="./assets/images/album/album_img/Supernatural.webp" />
           </div>
           <!--앨범 이동 btn 영역-->
           <ul class="album_player_btn mx-auto mt-14 flex w-72 items-center justify-between">
             <li>
               <button id="preAlbum">
-                <img class="h-12 w-12" src="/assets/images/albums/previous.png" />
+                <img class="h-12 w-12" src="./assets/images/albums/previous.png" />
               </button>
             </li>
             <li>
               <button id="playAlbum" class="album_player_play_btn">
-                <img class="h-20 w-20" src="/assets/images/albums/play-circle.png" />
+                <img class="h-20 w-20" src="./assets/images/albums/play-circle.png" />
               </button>
             </li>
             <li>
               <button id="nextAlbum">
-                <img class="h-12 w-12" src="/assets/images/albums/previous-1.png" />
+                <img class="h-12 w-12" src="./assets/images/albums/previous-1.png" />
               </button>
             </li>
           </ul>
         </div>
         <!--영수증 영역-->
         <div id="album-info" class="playList">
-          <img src="/assets/images/albums/PlayList_logo.png" alt="play list" class="mx-auto mt-4 w-60" />
+          <img src="./assets/images/albums/PlayList_logo.png" alt="play list" class="mx-auto mt-4 w-60" />
           <p>order #3264</p>
           <div class="playlist-album-wrap">
             <div class="playlist-album-1">
@@ -142,7 +142,7 @@
           <hr class="my-4 border-dashed border-black" />
           <a id="youtube" href="" target="_blank">
             <img
-              src="/assets/images/albums/NEWJEANS_PLAYLIST_QR_image.png"
+              src="./assets/images/albums/NEWJEANS_PLAYLIST_QR_image.png"
               alt="QR Code"
               id="qr"
               class="mx-auto mb-5 h-28 w-28 mix-blend-darken" />
@@ -155,7 +155,7 @@
     <!-- s: 풋터 -->
     <footer class="container mx-auto flex flex-wrap items-center justify-between py-10 font-cafe-fill text-4xl">
       <a href="https://ador.world/" target="_blank">
-        <img src="/assets/images/header/logo-ador.svg" alt="ador" class="w-28" />
+        <img src="./assets/images/header/logo-ador.svg" alt="ador" class="w-28" />
       </a>
       <a href="https://github.com/ormcamp-fe-3rd/bunnies-page" target="_blank">Hongdaeipgu</a>
     </footer>
