--- a/index.html
+++ b/index.html
@@ -4,39 +4,39 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bunnies Page</title>
-    <link rel="shortcut icon" type="image/x-icon" href="/assets/images/common/favicon.ico" />
-    <link rel="stylesheet" href="/assets/css/tailwindcss.output.css" />
-    <script type="module" src="/assets/js/home/video.js"></script>
-    <script type="module" src="/assets/js/home/photoCard.js"></script>
+    <link rel="shortcut icon" type="image/x-icon" href="./assets/images/common/favicon.ico" />
+    <link rel="stylesheet" href="./assets/css/tailwindcss.output.css" />
+    <script type="module" src="./assets/js/home/video.js"></script>
+    <script type="module" src="./assets/js/home/photoCard.js"></script>
     <script type="module" src="./assets/js/home/albumIcons.js"></script>
   </head>
 
   <!-- ! 홈-메뉴-텍스트 및 아이콘 -->
   <body
-    class="cursor-[url('/assets/images/common/cursor/korean.png'),_default] overflow-x-hidden bg-zinc-950 text-white">
+    class="cursor-[url('../../assets/images/common/cursor/korean.png'),_default] overflow-x-hidden bg-zinc-950 text-white">
     <!-- s: 헤더 -->
     <header class="container mx-auto flex h-40 w-full flex-wrap items-center justify-between max-md:px-5">
       <nav class="flex flex-wrap justify-between font-cafe text-4xl max-md:w-full md:gap-20">
         <a href="/" class="font-cafe-fill hover:font-cafe-fill">Main</a>
-        <a href="/member.html" class="hover:font-cafe-fill">Team</a>
-        <a href="/album.html" class="hover:font-cafe-fill">Albums</a>
+        <a href="./member.html" class="hover:font-cafe-fill">Team</a>
+        <a href="./album.html" class="hover:font-cafe-fill">Albums</a>
       </nav>
       <!-- s: SNS -->
       <div class="flex items-center justify-between gap-4 max-md:hidden">
         <a href="https://play.google.com/store/apps/details?id=co.weverse.phoning&hl=ko&pli=1" target="_blank">
-          <img src="/assets/images/header/homeMenuicon1.svg" alt="phoning" class="h-6 w-6" />
+          <img src="./assets/images/header/homeMenuicon1.svg" alt="phoning" class="h-6 w-6" />
         </a>
         <a href="https://x.com/NewJeans_ADOR" target="_blank">
-          <img src="/assets/images/header/homeMenuicon2.svg" alt="x" class="h-6 w-6" />
+          <img src="./assets/images/header/homeMenuicon2.svg" alt="x" class="h-6 w-6" />
         </a>
         <a href="https://www.instagram.com/newjeans_official/" target="_blank">
-          <img src="/assets/images/header/homeMenuicon3.svg" alt="insta" class="h-6 w-6" />
+          <img src="./assets/images/header/homeMenuicon3.svg" alt="insta" class="h-6 w-6" />
         </a>
         <a href="https://www.facebook.com/official.newjeans/?locale=gn_PY" target="_blank">
-          <img src="/assets/images/header/homeMenuicon4.svg" alt="facebook" class="h-6 w-6" />
+          <img src="./assets/images/header/homeMenuicon4.svg" alt="facebook" class="h-6 w-6" />
         </a>
         <a href="https://www.youtube.com/channel/UCMki_UkHb4qSc0qyEcOHHJw" target="_blank">
-          <img src="/assets/images/header/homeMenuicon5.svg" alt="youtube" class="h-6 w-6" />
+          <img src="./assets/images/header/homeMenuicon5.svg" alt="youtube" class="h-6 w-6" />
         </a>
       </div>
       <!-- e: SNS -->
@@ -84,45 +84,45 @@
         class="member-card-box container mx-auto grid w-full grid-cols-5 gap-x-12 gap-y-6 px-5 max-lg:grid-cols-3 max-md:grid-cols-2 max-sm:grid-cols-1">
         <li id="home-minji" class="relative w-full -rotate-12 overflow-hidden rounded">
           <a href="/member.html?member=minji">
-            <img src="/assets/images/main-member/main-minji.jpeg" class="aspect-[2/3] w-full" alt="" />
+            <img src="./assets/images/main-member/main-minji.jpeg" class="aspect-[2/3] w-full" alt="" />
             <img
-              src="/assets/images/main-member/main-minji-frame.png"
+              src="./assets/images/main-member/main-minji-frame.png"
               class="absolute inset-0 h-full w-full object-cover opacity-0 hover:opacity-100"
               alt="" />
           </a>
         </li>
         <li id="home-hanni" class="relative w-full rotate-6 overflow-hidden rounded">
           <a href="/member.html?member=hanni">
-            <img src="/assets/images/main-member/main-hanni.jpeg" class="aspect-[2/3] w-full" alt="" />
+            <img src="./assets/images/main-member/main-hanni.jpeg" class="aspect-[2/3] w-full" alt="" />
             <img
-              src="/assets/images/main-member/main-hanni-frame.png"
+              src="./assets/images/main-member/main-hanni-frame.png"
               class="absolute inset-0 h-full w-full object-cover opacity-0 hover:opacity-100"
               alt="" />
           </a>
         </li>
         <li id="home-danni" class="relative w-full -rotate-6 overflow-hidden rounded">
           <a href="/member.html?member=danni">
-            <img src="/assets/images/main-member/main-danielle.jpeg" class="aspect-[2/3] w-full" alt="" />
+            <img src="./assets/images/main-member/main-danielle.jpeg" class="aspect-[2/3] w-full" alt="" />
             <img
-              src="/assets/images/main-member/main-danielle-frame.png"
+              src="./assets/images/main-member/main-danielle-frame.png"
               class="absolute inset-0 h-full w-full object-cover opacity-0 hover:opacity-100"
               alt="" />
           </a>
         </li>
         <li id="home-haerin" class="relative w-full rotate-12 overflow-hidden rounded">
           <a href="/member.html?member=haerin">
-            <img src="/assets/images/main-member/main-haerin.jpeg" class="aspect-[2/3] w-full" alt="" />
+            <img src="./assets/images/main-member/main-haerin.jpeg" class="aspect-[2/3] w-full" alt="" />
             <img
-              src="/assets/images/main-member/main-haerin-frame.png"
+              src="./assets/images/main-member/main-haerin-frame.png"
               class="absolute inset-0 h-full w-full object-cover opacity-0 hover:opacity-100"
               alt="" />
           </a>
         </li>
         <li id="home-hyein" class="relative w-full -rotate-3 overflow-hidden rounded">
           <a href="/member.html?member=hyein">
-            <img src="/assets/images/main-member/main-hyein.jpeg" class="aspect-[2/3] w-full" alt="" />
+            <img src="./assets/images/main-member/main-hyein.jpeg" class="aspect-[2/3] w-full" alt="" />
             <img
-              src="/assets/images/main-member/main-hyein-frame.png"
+              src="./assets/images/main-member/main-hyein-frame.png"
               class="absolute inset-0 h-full w-full object-cover opacity-0 hover:opacity-100"
               alt="" />
           </a>
@@ -133,14 +133,14 @@
 
     <!-- 앨범 섹션 영역 지정 -->
     <section
-      class="computer my-3 w-full overflow-hidden bg-[url('/assets/images/album/pc-outside-background.jpg')] bg-cover bg-center bg-no-repeat py-6 max-md:px-6">
+      class="computer my-3 w-full overflow-hidden bg-[url('../images/album/pc-outside-background.jpg')] bg-cover bg-center bg-no-repeat py-6 max-md:px-6">
       <!-- s: 컴퓨터 목업 -->
       <div class="mock-wrap container relative z-20 mx-auto">
         <!-- s: 컴퓨터 배경화면 영역 -->
         <div class="computer-bg-wrap relative">
           <div
             id="album-icon-warp"
-            class="flex aspect-video w-full flex-wrap items-start justify-start gap-11 overflow-y-auto rounded-t-3xl border-[30px] border-solid border-black bg-[url('/assets/images/album/pc-outside-background.jpg')] bg-cover bg-center bg-no-repeat p-10 text-center max-md:h-[500px] max-md:rounded-3xl max-md:p-2">
+            class="flex aspect-video w-full flex-wrap items-start justify-start gap-11 overflow-y-auto rounded-t-3xl border-[30px] border-solid border-black bg-[url('../images/album/pc-outside-background.jpg')] bg-cover bg-center bg-no-repeat p-10 text-center max-md:h-[500px] max-md:rounded-3xl max-md:p-2">
             <button
               type="button"
               class="w-32 break-all rounded-md bg-opacity-30 p-2 transition duration-200 hover:bg-white hover:bg-opacity-30">
@@ -229,7 +229,7 @@
                 <li>
                   <a href="/album.html" id="album-page">
                     <img
-                      src="/assets/images/albums/play-circle.png"
+                      src="./assets/images/albums/play-circle.png"
                       alt="앨범 페이지"
                       class="h-10 w-10 rounded-full bg-black object-contain transition duration-200 hover:bg-red-500" />
                   </a>
@@ -254,7 +254,7 @@
     <!-- s: 풋터 -->
     <footer class="container mx-auto flex flex-wrap items-center justify-between py-10 font-cafe-fill text-4xl">
       <a href="https://ador.world/" target="_blank">
-        <img src="/assets/images/header/logo-ador.svg" alt="ador" class="w-28" />
+        <img src="./assets/images/header/logo-ador.svg" alt="ador" class="w-28" />
       </a>
       <a href="https://github.com/ormcamp-fe-3rd/bunnies-page" target="_blank">Hongdaeipgu</a>
     </footer>
