--- a/member.html
+++ b/member.html
@@ -4,36 +4,36 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bunnies Page</title>
-    <link rel="shortcut icon" type="image/x-icon" href="/assets/images/common/favicon.ico" />
-    <link rel="stylesheet" href="/assets/css/tailwindcss.output.css" />
-    <link rel="stylesheet" href="/assets/css/member.css" />
-    <script type="module" src="/assets/js/member/photo-page.js"></script>
-    <script type="module" src="/assets/js/member/message-board.js"></script>
+    <link rel="shortcut icon" type="image/x-icon" href="./assets/images/common/favicon.ico" />
+    <link rel="stylesheet" href="./assets/css/tailwindcss.output.css" />
+    <link rel="stylesheet" href="./assets/css/member.css" />
+    <script type="module" src="./assets/js/member/photo-page.js"></script>
+    <script type="module" src="./assets/js/member/message-board.js"></script>
   </head>
-  <body class="cursor-[url('/assets/images/common/cursor/bunnie.png'),_default] bg-zinc-950 text-white">
+  <body class="cursor-[url('../images/common/cursor/bunnie.png'),_default] bg-zinc-950 text-white">
     <!-- s: 헤더 -->
     <header class="container relative z-50 mx-auto flex h-40 w-full flex-wrap items-center justify-between max-md:px-5">
       <nav class="flex flex-wrap justify-between font-cafe text-4xl max-md:w-full md:gap-20">
-        <a href="/" class="hover:font-cafe-fill">Main</a>
-        <a href="/member.html" class="font-cafe-fill hover:font-cafe-fill">Team</a>
-        <a href="/album.html" class="hover:font-cafe-fill">Albums</a>
+        <a href="./index.html" class="hover:font-cafe-fill">Main</a>
+        <a href="./member.html" class="font-cafe-fill hover:font-cafe-fill">Team</a>
+        <a href="./album.html" class="hover:font-cafe-fill">Albums</a>
       </nav>
       <!-- s: SNS -->
       <div class="flex items-center justify-between gap-4 max-md:hidden">
         <a href="https://play.google.com/store/apps/details?id=co.weverse.phoning&hl=ko&pli=1" target="_blank">
-          <img src="/assets/images/header/homeMenuicon1.svg" alt="phoning" class="h-6 w-6" />
+          <img src="./assets/images/header/homeMenuicon1.svg" alt="phoning" class="h-6 w-6" />
         </a>
         <a href="https://x.com/NewJeans_ADOR" target="_blank">
-          <img src="/assets/images/header/homeMenuicon2.svg" alt="x" class="h-6 w-6" />
+          <img src="./assets/images/header/homeMenuicon2.svg" alt="x" class="h-6 w-6" />
         </a>
         <a href="https://www.instagram.com/newjeans_official/" target="_blank">
-          <img src="/assets/images/header/homeMenuicon3.svg" alt="insta" class="h-6 w-6" />
+          <img src="./assets/images/header/homeMenuicon3.svg" alt="insta" class="h-6 w-6" />
         </a>
         <a href="https://www.facebook.com/official.newjeans/?locale=gn_PY" target="_blank">
-          <img src="/assets/images/header/homeMenuicon4.svg" alt="facebook" class="h-6 w-6" />
+          <img src="./assets/images/header/homeMenuicon4.svg" alt="facebook" class="h-6 w-6" />
         </a>
         <a href="https://www.youtube.com/channel/UCMki_UkHb4qSc0qyEcOHHJw" target="_blank">
-          <img src="/assets/images/header/homeMenuicon5.svg" alt="youtube" class="h-6 w-6" />
+          <img src="./assets/images/header/homeMenuicon5.svg" alt="youtube" class="h-6 w-6" />
         </a>
       </div>
       <!-- e: SNS -->
@@ -329,7 +329,7 @@
     <!-- s: 풋터 -->
     <footer class="container mx-auto flex flex-wrap items-center justify-between py-10 font-cafe-fill text-4xl">
       <a href="https://ador.world/" target="_blank">
-        <img src="/assets/images/header/logo-ador.svg" alt="ador" class="w-28" />
+        <img src="./assets/images/header/logo-ador.svg" alt="ador" class="w-28" />
       </a>
       <a href="https://github.com/ormcamp-fe-3rd/bunnies-page" target="_blank">Hongdaeipgu</a>
     </footer>
