fix: 라이브러리 가져오기 변경

--- a/album.html
+++ b/album.html
@@ -7,14 +7,8 @@
     <link rel="shortcut icon" type="image/x-icon" href="./assets/images/common/favicon.ico" />
     <link rel="stylesheet" href="./assets/css/tailwindcss.output.css" />
     <link rel="stylesheet" href="./assets/css/album.css" />
-    <script type="importmap">
-      {
-        "imports": {
-          "three": "/node_modules/three/build/three.module.min.js",
-          "Orbit": "/node_modules/three/examples/jsm/controls/OrbitControls.js"
-        }
-      }
-    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/controls/OrbitControls.js"></script>
     <script type="module" src="./assets/js/album/playlist.js"></script>
     <script type="module" src="./assets/js/album/three.js"></script>
   </head>
