fix: 이동 경로 변경

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- s: 헤더 -->
     <header class="container mx-auto flex h-40 w-full flex-wrap items-center justify-between max-md:px-5">
       <nav class="flex flex-wrap justify-between font-cafe text-4xl max-md:w-full md:gap-20">
-        <a href="/" class="font-cafe-fill hover:font-cafe-fill">Main</a>
+        <a href="./index.html" class="font-cafe-fill hover:font-cafe-fill">Main</a>
         <a href="./member.html" class="hover:font-cafe-fill">Team</a>
         <a href="./album.html" class="hover:font-cafe-fill">Albums</a>
       </nav>
@@ -83,7 +83,7 @@
       <ul
         class="member-card-box container mx-auto grid w-full grid-cols-5 gap-x-12 gap-y-6 px-5 max-lg:grid-cols-3 max-md:grid-cols-2 max-sm:grid-cols-1">
         <li id="home-minji" class="relative w-full -rotate-12 overflow-hidden rounded">
-          <a href="/member.html?member=minji">
+          <a href="./member.html?member=minji">
             <img src="./assets/images/main-member/main-minji.jpeg" class="aspect-[2/3] w-full" alt="" />
             <img
               src="./assets/images/main-member/main-minji-frame.png"
@@ -92,7 +92,7 @@
           </a>
         </li>
         <li id="home-hanni" class="relative w-full rotate-6 overflow-hidden rounded">
-          <a href="/member.html?member=hanni">
+          <a href="./member.html?member=hanni">
             <img src="./assets/images/main-member/main-hanni.jpeg" class="aspect-[2/3] w-full" alt="" />
             <img
               src="./assets/images/main-member/main-hanni-frame.png"
@@ -101,7 +101,7 @@
           </a>
         </li>
         <li id="home-danni" class="relative w-full -rotate-6 overflow-hidden rounded">
-          <a href="/member.html?member=danni">
+          <a href="./member.html?member=danni">
             <img src="./assets/images/main-member/main-danielle.jpeg" class="aspect-[2/3] w-full" alt="" />
             <img
               src="./assets/images/main-member/main-danielle-frame.png"
@@ -110,7 +110,7 @@
           </a>
         </li>
         <li id="home-haerin" class="relative w-full rotate-12 overflow-hidden rounded">
-          <a href="/member.html?member=haerin">
+          <a href="./member.html?member=haerin">
             <img src="./assets/images/main-member/main-haerin.jpeg" class="aspect-[2/3] w-full" alt="" />
             <img
               src="./assets/images/main-member/main-haerin-frame.png"
@@ -119,7 +119,7 @@
           </a>
         </li>
         <li id="home-hyein" class="relative w-full -rotate-3 overflow-hidden rounded">
-          <a href="/member.html?member=hyein">
+          <a href="./member.html?member=hyein">
             <img src="./assets/images/main-member/main-hyein.jpeg" class="aspect-[2/3] w-full" alt="" />
             <img
               src="./assets/images/main-member/main-hyein-frame.png"
@@ -174,7 +174,7 @@
               <div
                 class="album-info-wrap flex w-full max-w-[600px] items-start justify-center gap-x-10 gap-y-4 max-md:flex-wrap">
                 <a
-                  href="/album.html"
+                  href="./album.html"
                   class="album-img group relative block aspect-square w-full max-w-60 flex-shrink-0 overflow-hidden rounded-full border-2 border-solid border-gray-400 transition-shadow duration-300 hover:shadow-[0_5px_15px] hover:shadow-zinc-600">
                   <img
                     id="album-img"
@@ -227,7 +227,7 @@
                 </li>
                 <li class="mx-6">　|　</li>
                 <li>
-                  <a href="/album.html" id="album-page">
+                  <a href="./album.html" id="album-page">
                     <img
                       src="./assets/images/albums/play-circle.png"
                       alt="앨범 페이지"
