--- a/index.html
+++ b/index.html
@@ -210,19 +210,19 @@
               <ul class="service-list mt-10 flex w-full flex-wrap items-center justify-center text-teal-950">
                 <li>
                   <a href="" target="_blank" id="melon">
-                    <img src="assets/images/album/melon.svg" alt="Melon" class="h-12 w-12 object-contain" />
+                    <img src="./assets/images/album/melon.svg" alt="Melon" class="h-12 w-12 object-contain" />
                   </a>
                 </li>
                 <li class="mx-6">　|　</li>
                 <li>
                   <a href="" target="_blank" id="flo">
-                    <img src="assets/images/album/flo.svg" alt="Flow" class="h-12 w-12 object-contain" />
+                    <img src="./assets/images/album/flo.svg" alt="Flow" class="h-12 w-12 object-contain" />
                   </a>
                 </li>
                 <li class="mx-6">　|　</li>
                 <li>
                   <a href="" target="_blank" id="genie">
-                    <img src="assets/images/album/genie.svg" alt="Genie" class="h-12 w-12 object-contain" />
+                    <img src="./assets/images/album/genie.svg" alt="Genie" class="h-12 w-12 object-contain" />
                   </a>
                 </li>
                 <li class="mx-6">　|　</li>
